fixed back nav overlap

--- a/tic-tac-toe/css/TicTacToe.css
+++ b/tic-tac-toe/css/TicTacToe.css
@@ -162,7 +162,7 @@ table tr td:last-child {
 
 .backNav {
   position: fixed;
-  bottom: 5%;
+  bottom: 15%;
   width: 100%;
   text-align: center;
 }
